--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
-
-
-#diezAños{background-color: black; color: #FFC107;padding: 20px;}
-#obteneDescuento{background-color: white;}
-.logoNav{width: 50px;height: 50px;}
+body{
+    background-color: #FFC107;
+    margin: 0;
+    font-family: Helvetica, Sans-Serif;
+}
+#diezAños{
+    background-color: black; color: #FFC107;padding: 20px;
+}
+#obteneDescuento{
+    background-color: white;
+}
+.logoNav{
+    width: 50px;height: 50px;
+}
