--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,25 @@ body{
     margin: 0;
     font-family: Helvetica, Sans-Serif;
 }
+#somosFlia{
+    padding-top: 120px;
+}
+#somosFlia img{
+    width: 250px;
+    height: 230px;
+}
 #diezAños{
-    background-color: black; color: #FFC107;padding: 20px;
+    background-color: black;
+    color: #FFC107;
+    padding: 20px;
 }
 #obteneDescuento{
     background-color: white;
 }
 .logoNav{
-    width: 50px;height: 50px;
+    width: 50px;
+    height: 50px;
+}
+.bold{
+    font-weight: bold;
 }
