--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
 #somosFlia{
     padding-top: 120px;
 }
-#somosFlia img{
+#logoflia{
     width: 250px;
     height: 230px;
 }
@@ -24,4 +24,40 @@ body{
 }
 .bold{
     font-weight: bold;
+}
+.container-carusel{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.slider{
+    position: relative;
+    width: 100%;
+    height: 320px;
+    overflow: hidden;
+}
+.item{
+    position: absolute;
+    width: 250px;
+    height: 320px;
+    border-radius: 10px;
+    padding: 2px;
+    transition: 0.5s;
+    left: calc(50% - 110px);
+    top: 0;
+    background-color: rgb(0, 0, 0);
+}
+.item img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+#next, #prev{
+    color: #fff;
+    background-color: transparent;
+    border: none;
+    font-size: xxx-large;
+    font-family: monospace;
+    font-weight: bold;
+    align-self: center;
 }
