--- a/css/style.css
+++ b/css/style.css
@@ -3,39 +3,48 @@ body{
     margin: 0;
     font-family: Helvetica, Sans-Serif;
 }
+
 #somosFlia{
     padding-top: 120px;
 }
+
 #logoflia{
     width: 250px;
     height: 230px;
 }
+
 #diezAños{
     background-color: black;
     color: #FFC107;
     padding: 20px;
 }
+
 #obteneDescuento{
     background-color: white;
 }
+
 .logoNav{
     width: 50px;
     height: 50px;
 }
+
 .bold{
     font-weight: bold;
 }
+
 .container-carusel{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .slider{
     position: relative;
     width: 100%;
     height: 320px;
     overflow: hidden;
 }
+
 .item{
     position: absolute;
     width: 250px;
@@ -47,11 +56,13 @@ body{
     top: 0;
     background-color: rgb(0, 0, 0);
 }
+
 .item img{
     width: 100%;
     height: 100%;
     border-radius: 10px;
 }
+
 #next, #prev{
     color: #fff;
     background-color: transparent;
@@ -60,4 +71,9 @@ body{
     font-family: monospace;
     font-weight: bold;
     align-self: center;
+}
+
+label.error
+{
+    color: darkred;
 }
