--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,8 @@ label.error
     #formDescuento {
         background-color: #E3E3E3;
         padding: 30px;
+        margin-top: 15px;
+        margin-bottom: 30px;
         }
         #btnEnviarDescuento{
              background-color: black;
@@ -98,6 +100,20 @@ label.error
     #formDescuento {
         background-color: #E3E3E3;
         padding: 30px;
+        margin-top: 15px;
+        margin-bottom: 30px;
         }
+        #btnEnviarDescuento{
+            background-color: black;
+            color: white;
+            width: 50%;             
+       }     
 
+}
+
+/*arriba de 1400.... */
+@media only screen and (min-width: 1400px) {      
+
+   
+        
 }
