--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,44 @@ body{
     margin: 0;
     font-family: Helvetica, Sans-Serif;
 }
-
+.navbar{
+    padding: 0;
+}
+.navbar-nav a{
+    margin-right: 10px;
+    padding: 12px;
+    position: relative;
+    text-decoration: none;
+    letter-spacing: 0.5px;
+}
+.navbar-nav a::after{
+    content: "";
+    position: absolute;
+    background-color: black;
+    height: 3px;
+    width: 0%;
+    left: 0;
+    transition: 0.4s;
+    bottom: 6px;
+}
+.navbar-nav a:hover:after{
+    width: 100%;
+}
 #somosFlia{
-    padding-top: 120px;
+    padding: 0;
+    margin-top: 120px;
+    margin-bottom: 100px;
+}
+#logoflia{
+    margin-bottom: 100px;
+}
+#somosFlia h1{
+    margin-bottom: 100px;
 }
 
 #logoflia{
-    width: 250px;
-    height: 230px;
+    width: 340px;
+    height: 300px;
 }
 
 #diezAños{
@@ -24,8 +54,8 @@ body{
 }
 
 .logoNav{
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
 }
 
 .bold{
@@ -34,13 +64,13 @@ body{
 
 .container-carusel{
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .slider{
     position: relative;
-    width: 100%;
+    width: 65%;
     height: 320px;
     overflow: hidden;
 }
