--- a/css/style.css
+++ b/css/style.css
@@ -27,20 +27,15 @@ body{
     width: 100%;
 }
 #somosFlia{
-    padding: 0;
-    margin-top: 150px;   
+    padding: 0;      
     height: 800px;
 }
 #logoflia{
-    margin-bottom: 100px;
+    width: 340px;
+    height: 300px;   
 }
 #somosFlia h1{
     margin-bottom: 50px;
-}
-
-#logoflia{
-    width: 340px;
-    height: 300px;
 }
 
 #diezAños{
@@ -111,9 +106,12 @@ label.error
 /*abajo de 576.... */
 @media only screen and (max-width: 576px) {
     #somosFlia{
-        padding: 0;
-        margin-top: 120px;   
+       display: flex;
+       flex-direction: column;
+       justify-content: center;  
         height: 700px;
+        margin: 0;
+        padding: 0;
     }
     #somosFlia h1{
         margin: 8px;
