--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,9 @@ label.error
     #btnEnviarDescuento{
              background-color: black;
              color: white;
-             width: 50%;             
+             width: 70%; 
+             padding: 10px;
+             box-shadow: 0px 5px 15px black          
         }
         #formContacto{
             padding: 20px;
