--- a/css/style.css
+++ b/css/style.css
@@ -160,27 +160,59 @@ label.error
         .iconosRedes{width: 30px;height: 30px;margin: 5px;}
         .btnNavSm{display: block;}
         .btnNavLg{display: none;}
-
-
 }
 /*arriba de 576.... */
 @media only screen and (min-width: 576px) {
-        #formDescuento {
-        background-color: #E3E3E3;
-        padding: 30px;
-        margin-top: 15px;
-        margin-bottom: 30px;
-        }
-        #btnEnviarDescuento{
-            background-color: black;
-            color: white;
-            width: 50%;             
+    #somosFlia{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;  
+         height: 700px;
+         margin: 0;
+         padding: 0;
+     }
+     #somosFlia h1{
+         margin: 8px;
+     }
+     #logoflia{
+         width: 60%;
+         height: 30%;
+     }
+     #diezAños {
+         padding: 0px;        
+         margin-top: 15px;
        }
-       #seccionFormularioContacto{
-        flex-direction: column-reverse;
-    }       
-       .btnNavSm{display: block;}
-        .btnNavLg{display: none;}
+     #containerProductos{
+         margin-bottom: 80px;
+     }
+        #formDescuento {
+         background-color: #E3E3E3;
+         padding: 30px;
+         margin-top: 15px;
+         margin-bottom: 30px;
+         }
+     #btnEnviarDescuento{
+              background-color: black;
+              color: white;
+              width: 70%; 
+              padding: 10px;
+              box-shadow: 0px 5px 15px black          
+         }
+         #seccionFormularioContacto{
+             flex-direction: column-reverse;
+         }
+         #formContacto{
+             padding: 20px;
+                    }      
+        
+         .logoNav{
+             width: 40px;
+             height: 40px;
+         }
+         .txtDescripcion{margin:15px;}
+         .iconosRedes{width: 30px;height: 30px;margin: 5px;}
+         .btnNavSm{display: block;}
+         .btnNavLg{display: none;}
 }
 /*arriba de 7682.... */
 @media only screen and (min-width: 768px) {
