--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,700&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+/*font-family: 'Raleway', sans-serif; font-family: 'Roboto', sans-serif;*/
 body{
     background-color: #FFC107;
     margin: 0;
@@ -191,7 +193,8 @@ label.error
          margin-top: 15px;
          margin-bottom: 30px;
          margin-right: 40px;
-         margin-left: 40px
+         margin-left: 40px;
+         padding-bottom: 50px;
          }
      #btnEnviarDescuento{
               background-color: black;
@@ -213,7 +216,7 @@ label.error
              width: 40px;
              height: 40px;
          }
-         .txtDescripcion{margin:25px;}
+         .txtDescripcion{margin:30px;}
          .iconosRedes{width: 30px;height: 30px;margin: 5px;}
          .btnNavSm{display: block;}
          .btnNavLg{display: none;}
