--- a/css/style.css
+++ b/css/style.css
@@ -128,11 +128,6 @@ i.fa-brands {
     font-size: 20px;
 }
 
-#festeja{
-    color: #FFC107;
-    font-size: 36px;
-    padding: 0px 170px;
-}
 
 label.error
 {
@@ -160,6 +155,11 @@ label.error
       }
     #containerProductos{
         margin-bottom: 80px;
+    }
+    #festeja{
+        color: #FFC107;
+        font-size: 30px;
+        padding: 0px 0px;
     }
        #formDescuento {
         background-color: #E3E3E3;
@@ -217,6 +217,11 @@ label.error
      #containerProductos{
          margin-bottom: 80px;
      }
+     #festeja{
+        color: #FFC107;
+        font-size: 30px;
+        padding: 0px 0px;
+    }
         #formDescuento {
          background-color: #E3E3E3;
          padding: 30px;
@@ -255,8 +260,13 @@ label.error
          .btnNavLg{display: none;}
          .saltolg{display: none;}  
 }
-/*arriba de 7682.... */
+/*arriba de 768.... */
 @media only screen and (min-width: 768px) {
+    #festeja{
+        color: #FFC107;
+        font-size: 30px;
+        padding: 0px 0px;
+    }
     #logoflia{
         width:40%;
         height: 35%
@@ -275,7 +285,7 @@ label.error
     }
     .txtDescuento{width: 60%; margin: 0 auto;}
     .txtDescripcion{margin:10px;}
-    .textosContacto{margin-top:100px}
+    
   }
 
 /*arriba de 992.... */
@@ -295,8 +305,42 @@ label.error
 }
 
 /*arriba de 1400.... */
-@media only screen and (min-width: 1200px) {      
-     
+@media only screen and (min-width: 1200px) {    
+    #formDescuento {
+        margin-right: 40px;
+        margin-left: 40px;
+      }
+      #formContacto {
+        margin-right: 40px;
+        margin-left: 40px;
+      }
+      #festeja{
+               font-size: 36px;
+        padding: 0px 170px;
+    }
     .saltolg{display: block;}
+        
+}
+
+/*arriba de 1400.... */
+@media only screen and (min-width: 1400px) {    
+    .textosContacto{margin:40px;}
+        
+}
+
+/*arriba de 1600.... */
+@media only screen and (min-width: 1600px) {    
+    #festeja {      
+        padding: 0px 190px;          
+      }
+      #formDescuento {
+        margin-right: 70px;
+        margin-left: 70px;
+      }
+      #formContacto {
+        margin-right: 70px;
+        margin-left: 70px;
+      }
+    .txtDescripcion{margin:40px;}
         
 }
