--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ p{font-family: 'Roboto', sans-serif;}
 
 #diezAños{
     background-color: black;
-    color: #FFC107;
+    color: white;
     padding: 20px;
 }
 #btnEnviarDescuento{
@@ -174,7 +174,7 @@ label.error
              color: white;
              width: 70%; 
              padding: 10px;
-             box-shadow: 0px 5px 15px black          
+             box-shadow: 0px 5px 15px #000000a3;         
         }
         #seccionFormularioContacto{
             flex-direction: column-reverse;
@@ -238,7 +238,7 @@ label.error
               color: white;
               width: 70%; 
               padding: 10px;
-              box-shadow: 0px 5px 15px black          
+              box-shadow: 0px 5px 15px #000000a3;          
          }
          #seccionFormularioContacto{
              flex-direction: column-reverse;
