--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,10 @@ label.error
     color: darkred;
 }
 
+.btn{
+    font-family: 'Roboto', sans-serif;
+}
+
 /*abajo de 576.... */
 @media only screen and (max-width: 576px) {
     #somosFlia{
